feat: formar sextetos a partir de trios por preferencia
